@@ -42,6 +42,7 @@ Version 1.0.10 (March xxth 2013)
 - Implemented: Weather Station baro meter now more precise (xxxx.x hPa), and displaying device forcast
 - Fixed: Weather Station Rain meter
 - Fixed: Weather Station can now handle 6 temperature channels
+- Implemented: Adjustment value for barometer sensors
 
 Version 1.0.9 (February 17th 2013)
 - Implemented: OWL113 option to display in Ampere/Usage
